--- a/Maui/SimpleWeather.Maui/Controls/AQIControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/AQIControl.xaml
@@ -12,7 +12,7 @@
     MinimumWidthRequest="340">
     <Grid
         ColumnDefinitions="Auto,*"
-        RowDefinitions="Auto,*,Auto,Auto"
+        RowDefinitions="Auto,Auto,16,*"
         VerticalOptions="FillAndExpand">
         <Label
             x:Name="AQILabel"
@@ -37,7 +37,7 @@
             Grid.Row="1"
             Grid.ColumnSpan="2"
             ColumnDefinitions="Auto,*"
-            RowDefinitions="Auto,Auto">
+            RowDefinitions="*,*">
             <Label
                 x:Name="AQIndex"
                 Grid.Row="0"
@@ -66,17 +66,18 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 Padding="6"
+                Margin="0,0,0,12"
                 FontSize="14"
                 LineBreakMode="WordWrap"
                 MaxLines="3"
                 Text="{Binding Description}"
-                VerticalOptions="Start" />
+                VerticalOptions="Center" />
         </Grid>
         <ProgressBar
             x:Name="AQIProgressBar"
             Grid.Row="2"
             Grid.ColumnSpan="2"
-            Margin="12,0,12,12"
+            Margin="12,0"
             BackgroundColor="{AppThemeBinding Light='#B3616161',
                                               Dark='#8AF1F1F1'}"
             HeightRequest="4"
